# paint05

./: CMakeLists.txt
src/: main.cpp  mainwindow.cpp  mainwindow.h  painting.cpp  painting.h  toolbar.cpp  toolbar.h
tests/: CMakeLists.txt
tests/testssrc/: main.cpp  painttest.cpp  painttest.h
